[package]
name = "llm-kit-provider-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared utilities for LLM Kit providers"
keywords = ["ai", "utilities", "sdk", "provider"]
categories = ["api-bindings"]
readme = "../README.md"

[dependencies]
llm-kit-provider = { path = "../llm-kit-provider", version = "0.1.0" }
tokio-util = "0.7.16"  # For CancellationToken (equivalent to AbortSignal)
async-stream = "0.3"   # For async generators
futures-util = "0.3"   # For Stream trait and StreamExt
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.41", features = ["macros", "rt"] }  # For async tests
